syntax = "proto3";

/*
    * HOW TO : generate proto
    protoc post/postpb/post.proto --go_out=plugins=grpc:.
*/

package postpb;
option go_package="post/postpb";

message PostURLRequest {
    string url = 1;
}

message PostResponse {
    string url = 1;
    string title = 2;
    string description = 3;
    string image = 4;
}

service PostService {
    rpc GetPostDetail(PostURLRequest) returns (PostResponse) {};
}